src/objects/Inseminacion__c.object
<CustomObject>
    <description>Inseminaciones que se le hacen a cada vaca. Este servicio será importante, dado que le permitirá al tambero controlar la cantidad de inseminaciones que le hacen a una vaca, y a partir de las mismas notificar cuando una vaca estará en estado de pre-parto.</description>
    <fields>
        <fullName>Efectiva__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Se chequea esta box si la inseminación fue efectiva.</description>
        <inlineHelpText>Tickear si &apos;agarró&apos;</inlineHelpText>
        <label>Efectiva</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fecha__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>Fecha en la que se realiza la inseminación</description>
        <label>Fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_paricion__c</fullName>
        <description>Dara una fecha de parición estimada de acuerdo a la fecha de inseminación</description>
        <label>Fecha parición</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Padre__c</fullName>
        <description>Toro usado para la inseminación</description>
        <label>Padre</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vaca__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Una inseminación pertenece a una vaca</description>
        <label>Vaca</label>
        <referenceTo>Vaca__c</referenceTo>
        <relationshipLabel>Inseminaciones</relationshipLabel>
        <relationshipName>Inseminaciones</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Inseminación</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Inseminación Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inseminaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>